k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
name: demo
namespace: spring-test-application
labels:
app: demo
spec:
replicas: 1
selector:
matchLabels:
app: demo
template:
metadata:
labels:
app: demo
spec:
containers:
- image: registry.dev-nexus.honecloud.co.kr:5000/demo:0.1
imagePullPolicy: IfNotPresent
name: demo
ports:
- containerPort: 8080
