k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
name: demo
namespace: spring-test-application
labels:
app: demo
service: demo
spec:
ports:
- name: http
port: 8080
targetPort: 8080
selector:
app: demo
